cabal-version:      3.4
name:               Wyvern
version:            0.1.0.0
synopsis:           Simplified version of DRAKON diagramming language.
-- description:
homepage:           https://github.com/PiotrJustyna/wyvern
license:            NONE
author:             Piotr Justyna
maintainer:         piotr.justyna@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable Wyvern
    import:           warnings
    main-is:          Main.hs
    other-modules:    ID
                      Content
                      Constants
                      HelperDiagrams
                      StartTerminator
                      EndTerminator
                      Lexer
                      Parser
                      SkewerBlock
                      WyvernDiagram
    -- other-extensions:
    build-depends:    base ^>=4.19.1.0,
                      colour,
                      text,
                      diagrams-lib,
                      diagrams-svg,
                      containers,
                      MissingH,
                      array
    hs-source-dirs:   app
    default-language: Haskell2010
