cabal-version:      3.4
name:               Wyvern
version:            0.1.0.0
synopsis:           Simplified version of DRAKON diagramming language.
-- description:
homepage:           https://github.com/PiotrJustyna/wyvern
license:            NONE
author:             Piotr Justyna
maintainer:         piotr.justyna@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    exposed-modules:  ID
                      Content
                      Constants
                      Blocks
                      HelperDiagrams
                      StartTerminator
                      EndTerminator
                      Lexer
                      Parser
                      SkewerBlock
                      WyvernDiagram
                      InputArguments
    hs-source-dirs:   lib
    build-depends:    base ^>=4.19.1.0,
                      colour,
                      text,
                      diagrams-lib,
                      diagrams-svg,
                      containers,
                      MissingH,
                      array,
                      unordered-containers,
                      optparse-applicative
    default-language: Haskell2010

executable Wyvern
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.19.1.0,
                      array,
                      diagrams-lib,
                      diagrams-svg,
                      optparse-applicative,
                      Wyvern
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite WyvernTests
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          OverlappingLoopbacks.hs
    build-depends:    base ^>=4.19.1.0,
                      HUnit,
                      diagrams-lib,
                      containers,
                      Wyvern
    default-language: Haskell2010
