cabal-version:      3.4
name:               wyvern-diagrams
version:            0.4.2.0
synopsis:           Simple flowchart diagrams. Inspired by DRAKON.
description:        Wyvern combines syntax and rendering engine
                    for simple, DRAKON-like flowcharts.
homepage:           https://github.com/PiotrJustyna/wyvern
license:            BSD-3-Clause
License-file:       LICENSE
author:             Piotr Justyna
maintainer:         a568adff447749e8a5c47cdf7f31ed11@proton.me
copyright:          Piotr Justyna
Bug-reports:        https://github.com/PiotrJustyna/wyvern/issues
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
tested-with:        GHC == 9.8.4

source-repository head
  type:     git
  location: https://github.com/PiotrJustyna/wyvern

common warnings
    ghc-options: -Wall

library
    exposed-modules:  ID
                      Constants
                      Blocks
                      PositionedBlock
                      HelperDiagrams
                      Lexer
                      Parser
                      InputArguments
                      Validator
                      Layout
                      Renderer
    hs-source-dirs:   src/lib
    build-depends:
                      -- BSD-3-Clause
                      base >= 4.19.2.0 && < 5,
                      -- MIT
                      colour >= 2.3.6 && < 3,
                      -- BSD-3-Clause
                      diagrams-lib >= 1.5.1 && < 2,
                      -- BSD-3-Clause
                      diagrams-svg >= 1.5 && < 2,
                      -- BSD-3-Clause
                      containers >= 0.7 && < 1,
                      -- BSD-3-Clause
                      -- Used in Parser.
                      MissingH >= 1.6.0 && < 2,
                      -- BSD-3-Clause
                      -- Used in Lexer.
                      array >= 0.5.8 && < 1,
                      -- BSD-3-Clause
                      optparse-applicative >= 0.19.0 && < 1
    default-language: Haskell2010

executable wyvern-diagrams
    import:           warnings
    main-is:          Main.hs
    build-depends:
                      -- BSD-3-Clause
                      base >= 4.19.2.0 && < 5,
                      -- BSD-3-Clause
                      diagrams-svg >= 1.5 && < 2,
                      -- BSD-3-Clause
                      optparse-applicative >= 0.19.0 && < 1,
                      wyvern-diagrams
    hs-source-dirs:   src/app
    default-language: Haskell2010

test-suite wyvern-tests
    type:             exitcode-stdio-1.0
    hs-source-dirs:   src/tests
    main-is:          Main.hs
    other-modules:    ValidatorTests,
                      PositionedBlockTests,
                      Layout1Tests,
                      Layout2Tests
    build-depends:
                      -- BSD-3-Clause
                      base >= 4.19.2.0 && < 5,
                      -- MIT
                      hspec >= 2.11 && < 3,
                      -- BSD-3-Clause
                      diagrams-lib >= 1.5.1 && < 2,
                      -- BSD-3-Clause
                      containers >= 0.7 && < 1,
                      wyvern-diagrams
    default-language: Haskell2010
